--- a/QuizApp/package.json
+++ b/QuizApp/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.5.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^7.0.0",
     "expo": "~51.0.28",
