error while i'm trying to preview my app fixed

--- a/QuizApp/app.json
+++ b/QuizApp/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -23,8 +24,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
-      "favicon": "#"
+      "output": "static"
     },
     "plugins": [
       "expo-router"
